# nature-inspired-optimization

./: HOW_TO_RELEASE.md  README.md  pyproject.toml
.github/workflows/: docs.yml  release-pypi.yml
_notes/: sphinx.md
_notes/before_pep518/: setup.cfg
docs_src/: conf.py  index.rst
src/nature_inspired_optimization/: __init__.py
tests/: test_import.py
