# https://packaging.python.org/ja/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nature-inspired-optimization"
dynamic = ["version"]
dependencies = []
requires-python = ">= 3.8"
authors = [{ name = "yu9824" }]
maintainers = [{ name = "yu9824" }]
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = []
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
] # https://pypi.org/classifiers/

[project.optional-dependencies]
test = ["pytest"]
dev = ["build"]
optional = ["colorlog", "tqdm"]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-markdown-tables", "recommonmark"]
gui = ["TkEasyGUI"]

[project.urls]
Homepage = "https://github.com/yu9824/nature-inspired-optimization"
# Documentation = "https://readthedocs.org"
PyPI = "https://pypi.org/project/nature-inspired-optimization/"
Source = "https://github.com/yu9824/nature-inspired-optimization"
Tracker = "https://github.com/yu9824/nature-inspired-optimization/issues"
Changelog = "https://github.com/yu9824/nature-inspired-optimization/blob/main/CHANGELOG.md"

[project.scripts]
nature-inspired-optimization = "nature_inspired_optimization.__main__:entrypoint"

# [project.gui-scripts]
# nature-inspired-optimization-gui = "nature_inspired_optimization:main_gui"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "nature_inspired_optimization.__version__" }

[tool.setuptools.packages.find]
where = ["src/"]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
unfixable = ["F401"]
