# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = nature_inspired_optimization
version = attr: nature_inspired_optimization.__version__
description =
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
license_files = LICENSE
# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
author = yu9824
maintainer = yu9824
url = https://github.com/yu9824/nature-inspired-optimization
project_urls =
    Homepage = https://github.com/yu9824/nature-inspired-optimization
    PyPI = https://pypi.org/project/nature-inspired-optimization/
    Source = https://github.com/yu9824/nature-inspired-optimization
    Tracker = https://github.com/yu9824/nature-inspired-optimization/issues
    Changelog = https://github.com/yu9824/nature-inspired-optimization/blob/main/CHANGELOG.md

[options]
package_dir=
    =src
packages=find:
python_requires = >= 3.7
install_requires =
    typing-extensions >= 4.0.0; python_version < '3.8'

[options.packages.find]
where=src

[options.extras_require]
test = pytest
dev = build
optional = colorlog
docs = sphinx
       sphinx_rtd_theme
       sphinx-markdown-tables
       recommonmark
gui = TkEasyGUI

[options.entry_points]
console_scripts =
    nature-inspired-optimization = nature_inspired_optimization.__main__:entrypoint
# gui_scripts =
#     nature-inspired-optimization-gui = nature_inspired_optimization:main_gui
